--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LordHaveMercy">
-        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".SimpleCalculator"></activity>
+        <activity android:name=".Calculator" />
+        <activity android:name=".SecondActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
